--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -7,16 +7,17 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3), inset 0 0 50px rgba(0, 0, 0, 0.3);
 }
 
-.notes-component {
-    height: 100%;
+.text-editor {
+
+    margin-top: 100px;
 }
 
 .editor {
     padding-left: 1vmin;
     padding-top: 2vmin;
-    height: 100%;
+    height: 85%;
     max-width: 750px;
-    margin-top: 100px;
+
 }
 
 /* -------------------- TOOLBAR --------------------*/
