--- a/client/src/assets/css/panel.css
+++ b/client/src/assets/css/panel.css
@@ -123,6 +123,12 @@ body {
     width: 88.5%;
     height: 95vh;
 }
+
+.full_width.width-w-nav{
+    width: 100% !important;
+}
+
+
 /* #dashboard-container {
     margin-bottom: 0;
 } */
