--- a/client/src/assets/css/panel.css
+++ b/client/src/assets/css/panel.css
@@ -74,19 +74,19 @@ body {
     padding: 0;
 }
 
-.welcome {
-    float: left;
-    color: #31C3E7;
-    margin: 0 0 0 10px;
-    padding: 0 10px;
-    line-height: 40px;
-    background-image: url('/paperimages/Book+top+view2.jpg');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    width: 87.5%;
-    padding-left: 5%;
-    box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.2), 0 6px 20px 5px rgba(0, 0, 0, 0.19);
-}
+/*.welcome {*/
+    /*float: left;*/
+    /*color: #31C3E7;*/
+    /*margin: 0 0 0 10px;*/
+    /*padding: 0 10px;*/
+    /*line-height: 40px;*/
+    /*background-image: url('/paperimages/Book+top+view2.jpg');*/
+    /*background-size: 100% 100%;*/
+    /*background-repeat: no-repeat;*/
+    /*width: 87.5%;*/
+    /*padding-left: 5%;*/
+    /*box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.2), 0 6px 20px 5px rgba(0, 0, 0, 0.19);*/
+/*}*/
 
 .panelOptions {
     float: right;
@@ -119,16 +119,13 @@ body {
     border: 2px solid #31C3E7;
     color: #31C3E7;
 }
-.panel_div {
-    width: 88.5%;
-    height: 95vh;
-}
+/*.panel_div {*/
+    /*width: 88.5%;*/
+    /*height: 55vh;*/
+/*}*/
 
 .full_width.width-w-nav{
     width: 100% !important;
-}
-.hakuna-matata{
-    height: 1px; 
 }
 
 /* #dashboard-container {
