--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -10,7 +10,7 @@
     top: 0; 
     left: 0;
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
     background-color: #000;
     display: block;
     z-index: 2;
