--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -93,7 +93,6 @@ button.close {
 }
 
 .video-container iframe {
-    width: 95%;
     height: 100%;
     margin: 0 auto;
 }
@@ -185,4 +184,8 @@ button.close {
 }
 .Pane.horizontal.Pane2 {
     height: 325px;
+}
+.video-container iframe,
+.slides-iframe {
+    width: 93%;
 }
