--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -9,24 +9,30 @@
 
 .text-editor {
     height: 100%;
-    margin-top: 100px;
+    /* margin-top: 100px; */
 }
 
 .editor {
     padding-left: 1vmin;
     padding-top: 2vmin;
-    height: 85vh;
-    max-width: 50vw;
+    height: 100%;
+    /* max-width: 50vw; */
 }
 
 /* -------------------- TOOLBAR --------------------*/
+.notes-component-toolbar{
+    height:11%;
 
+}
+.notes-component.fifth-step{
+    height: 88%; 
+}
 .toolbar {
     width: 100%;
-    min-width: 420px;
-    height: 12%;
-    min-height: 100px;
-    position: absolute;
+    /* min-width: 420px; */
+    height: 100%;
+    /* min-height: 100px; */
+    position: relative;
     top: 0;
     right: 0;
     bottom: 0;
