--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -48,9 +48,10 @@ ul > li {
 
 .binderTitle{
     #margin-top: 1%;
-    border-top: solid 4px #white;
+    #border-top: solid 4px #white;
     #background-color: #96858f;
     cursor: pointer;
+    #border-top-left-radius: 5px;
 }
 
 .modify-btn{
@@ -70,6 +71,7 @@ ul > li {
      width: 100%;
      #border-bottom: solid 2px #7b6b73;
      margin-top: 2%;
+     box-shadow: 1px .5px .5px #747474;
      
 }
 
@@ -77,12 +79,14 @@ ul > li {
     #background-color: #9099a2;
     width: 90%;
     margin-left: 10%;
-    box-shadow: -1px .5px .5px #747474;
+    box-shadow: 1px .5px .5px #747474;
+    
 }
 
 .tabTitle{
     #border-top: solid 3px #75818a;
     cursor: pointer;   
+    border-top-left-radius: 5px;
 }
 
 .tabBody{
@@ -201,7 +205,7 @@ ul > li {
 }
 .hideNavbar.btn, .editMode.btn{
     color: #fafafa;
-    background-color: #37474f;
+    background-color: #607d8b;
     #font-weight: 400;
 }
 .navbarShow.btn {
@@ -254,7 +258,7 @@ ul > li {
 }
 
 .hideNavbar.btn:hover {
-    background-color: #607d8b;
+    background-color: #37474f;
 }
 
 .navbarShow{
