--- a/client/src/assets/css/slides.css
+++ b/client/src/assets/css/slides.css
@@ -12,32 +12,26 @@
 .slides-iframe
 {
   position: relative;
-  top: -7vh;
+  top: -9vh;
   bottom: 0;
-  left: 0;
   right: 0;
   z-index: 1;
   width: 95%;
-  height: 93%;
+  height: 91%;
   margin: 0 auto;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  /* box-shadow: 8px 12px #8888886e; */
   -webkit-box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.2), 0 6px 20px 5px rgba(0, 0, 0, 0.19);
   box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.2), 0 6px 20px 5px rgba(0, 0, 0, 0.19);
   left:3.5%;
-  /* width: 98%; */
 }
 .text-danger {
   position: relative;
   left: 1vw;
 }
-/* #slides-input.slides-input {
-  background-color: #fff;
-} */
 .arrow-container-slides {
   position: absolute;
-  top: 0vh;
+  top: 0;
   right: 5px;
   z-index: 3000;
   cursor: pointer;
@@ -45,4 +39,6 @@
 
 .slidesBtn {
   margin-top: 10px;
+  width: 45px !important;
+  padding: 0 !important;
 }
