--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -300,12 +300,11 @@ header {
 header > h1 {
     margin-left: 2px;
     font-size: 2.6vw;
-    color: #ffffff;
     display: inline;
 }
 
 .dashFlex {
-    color: #26a69a;
+    color: #0288d1;
 }
 
 .logoImage {
@@ -314,17 +313,19 @@ header > h1 {
 
 footer {
     width: 100%;
-    margin-top: 10px;
+    margin: 1% 0;
     z-index: 2;
+    position: relative;
+    bottom: 0vh;
 }
 
 .startTour.btn, .logoutBtn.btn {
-    height: 4.7vh;
-    width: 6vw;
-    background-color: #607d8b;;
+    height: 6%;
+    width: 41%;
+    background-color: #0288d1;;
     color: #fafafa;
-    padding: 5px;
-    font-size: 1.25vw;
+    padding: 2%;
+    font-size: 1vw;
     font-weight: 500;
 }
 
