--- a/client/src/assets/css/landing-page.css
+++ b/client/src/assets/css/landing-page.css
@@ -47,6 +47,7 @@ body {
     height: 100%;
     background-color: rgba(0,0,0,0.38);
     z-index: 0;
+    filter: blur(5px);
 }
 .title-container h1 {
     line-height: 8vh;
