--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -32,7 +32,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: #96858F;
+    background-color: #37474f;
     box-shadow: 0 5px 5px #999;
     z-index: 1;
     padding: 1.5% 1% 1% 1%;
@@ -65,26 +65,34 @@
 }
 
 .search-box {
-    margin-top: 5px;
+    /* margin-top: 5px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: space-between; */
+    height: 52%;
+    width: 60%;
+    margin-right: 20%;
+    display: inline-block;
 }
 
-.search-input {
-    width: 250px !important;
+.search-input.keyword {
+    /* width: 250px !important;
     height: 30px !important;
     padding-left: 5px !important;
     background-color: white !important;
-    border: 3px inset gray !important;
+    border: 3px inset gray !important; */
+    background-color: #eceff1;
+    height: 100%; 
 }
 
-.saveNotes {
-    width: 130px !important;
+.saveNotes.btn {
+    /* width: 130px !important;
     height: 35px !important;
     font-weight: 600 !important;
-    border: 3px outset gray !important;
+    border: 3px outset gray !important; */
+    color:white; 
+    width: 20%;
 }
 
 .saveNotes:hover{
