--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -33,7 +33,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: #37474f;
+    background-color: #455a64;
     box-shadow: 0 5px 5px #999;
     z-index: 1;
     padding: 1.5% 1% 1% 1%;
