--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -33,6 +33,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    /* background-color: #b0bec5; */
     background-color: #455a64;
     box-shadow: 0 5px 5px #999;
     z-index: 1;
