--- a/client/src/assets/css/landing-page.css
+++ b/client/src/assets/css/landing-page.css
@@ -51,6 +51,7 @@ body {
 }
 .title-container h1 {
     line-height: 8vh;
+    letter-spacing: 3.5px;
 }
 .google-div,
 .info {
@@ -108,6 +109,7 @@ body {
 
 .flex {
     color: #0393d7; 
+    font-style: italic;
 }
 .user-circle {
     border: 3px solid #fff;
