committing to get latest dev

--- a/client/src/assets/css/landing-page.css
+++ b/client/src/assets/css/landing-page.css
@@ -177,12 +177,13 @@ a.landing-login-text {
     background-color: #0393d7;
 }
 .dash-btn:hover {
-    background-color: #74636D;
+    background-color: #01579b;
 }
 .btn-wrapper button {
     margin-right: 5px;
 }
 
 .landingLogo {
-    height: 41px;
+    width: 2.9vw;
+    margin-right: .5%;
 }
