--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -309,11 +309,11 @@ ul > li {
     padding-right: 3px;
 }
 .navbarShow.btn:hover{
-    background-color: #37474f;
+    background-color: #01579b;
 }
 
 .hideNavbar.btn:hover {
-    background-color: #37474f;
+    background-color: #01579b;
 }
 
 .edit-mode-btn {
@@ -382,7 +382,8 @@ header > h1 {
 }
 
 .logoImage {
-    width: 3.25vw;
+    width: 1.8vw;
+    margin-right: 1%;
 }
 
 footer {
@@ -404,7 +405,7 @@ footer {
 }
 
 .startTour.btn:hover, .logoutBtn.btn:hover {
-    background-color: #37474f;
+    background-color: #01579b;
 }
 
 
