--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -45,25 +45,24 @@
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
-    height: 32px;
-    width: 70%;
+    height: 40%;
+    width: 60%;
 }
 
 .styleSquare {
-    width: 40px;
-    height: 30px;
-    box-sizing: border-box;
+    height: 80%;
     cursor: pointer;
     color: white;
 }
 
 .styleSquare:hover{
     background-color: ghostwhite;
-    color: #96858F;
+    color: #01579b;
 }
 
-.material-icons {
+.material-icons.notesIcons {
     font-size: 3vmin;
+    margin: 0;
 }
 
 .search-box {
@@ -99,8 +98,8 @@
     height: 40%; 
 }
 
-.saveNotes:hover{
-    background-color: ghostwhite !important;;
+.saveNotes.btn:hover{
+    background-color: #01579b;
 }
 
 .saveNotes:active {
