--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -2,3 +2,19 @@
     /*background-color: #6d7993;*/
     /*padding: 0.5% 0.5% 0.5% 0;*/
 /*}*/
+
+.mobileNav {
+    position: absolute;
+    bottom: 0%;
+    border-top: solid red 5px;
+    width: 100%;
+    height: 5vh;
+} 
+
+ .mobileNav> li{
+    display: inline-block;
+}
+
+.mobileLink{
+    width: 33%;
+}
