added nav to bottom in mobile

--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -335,6 +335,13 @@ input.edit_input_page{
     overflow: auto;
 }
 
+@media (max-width: 767px){
+    .hideNavbar.btn, .navbarShow.btn {
+        display: none;
+    }
+
+}
+
 /* --------------------- HEADER AND FOOTER ---------------------*/
 
 header {
