--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -11,10 +11,13 @@
     height: 5vh;
 } 
 
- .mobileNav> li{
+.mobileNav> li{
     display: inline-block;
 }
 
+.navLink{
+    margin-left: 4%;
+}
 .mobileLink{
-    width: 33%;
+    width: 24%;
 }
