--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -335,12 +335,6 @@ input.edit_input_page{
     overflow: auto;
 }
 
-@media (max-width: 767px){
-    .hideNavbar.btn, .navbarShow.btn {
-        display: none;
-    }
-
-}
 
 /* --------------------- HEADER AND FOOTER ---------------------*/
 
@@ -389,4 +383,34 @@ footer {
     background-color: #01579b;
 }
 
+
+@media (max-width: 767px){
+    .hideNavbar.btn, .navbarShow.btn {
+        display: none;
+    }
+    .binder-container {
+        height: 72vh;
+    }
+    .navbar.s2, header{
+        width: 100%;
+    }
+    .visibleHover, .hiddenHover{
+        visibility: visible;
+        opacity: .8;
+    }
+    header > h1 {
+        font-size: 3em;
+    }
+    .logoImage {
+        width: 10%;
+        margin-left: 2%;
+    }
+
+    footer{
+        padding-bottom: 5%;
+    }
+    .startTour.btn, .logoutBtn.btn {
+        font-size: 1em;
+    }
+}
 
