--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -238,13 +238,25 @@ button.close {
   height: 100%;
   background-color: #fff;
   position: absolute;
-  z-index: 9000;
-  transition: 0.2s;
+  z-index: 3500;
+  transition: 0.4s;
+  overflow-y: scroll;
 }
 .close-playlist {
   position: absolute;
   right: 4px;
   top: 4px;
+}
+.close-playlist-icon {
+  margin-right: 0;
+}
+.close-playlist-icon:hover {
+  cursor: pointer;
+}
+.video-playlist {
+  position: relative;
+  top: 2vh;
+  left: 0.5vw;
 }
 @media (max-width: 767px) and (orientation: portrait) {
   .video-container iframe {
